force-app/main/default/objects/Signature__c/Signature__c.object-meta.xml
<CustomObject>
    <description>חתימה</description>
    <label>החתמה</label>
    <nameField>
        <label>Signature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>החתמות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>