force-app/main/default/objects/Signature__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>הציוד החתום</description>
    <inlineHelpText>הציוד החתום</inlineHelpText>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Signed Equipments</relationshipLabel>
    <relationshipName>Signed_Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>