force-app/main/default/objects/Signature__c/fields/Location_at_Signature__c.field-meta.xml
<CustomField>
    <fullName>Location_at_Signature__c</fullName>
    <description>מיקום יעד</description>
    <inlineHelpText>מיקום יעד</inlineHelpText>
    <label>Location at Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>