force-app/main/default/objects/Signature__c/fields/Returned_Time__c.field-meta.xml
<CustomField>
    <fullName>Returned_Time__c</fullName>
    <description>תאריך ושעת החזרה</description>
    <inlineHelpText>תאריך ושעת החזרה</inlineHelpText>
    <label>Returned Time</label>
    <type>DateTime</type>
</CustomField>