force-app/main/default/objects/Signature__c/fields/Signed_Time__c.field-meta.xml
<CustomField>
    <fullName>Signed_Time__c</fullName>
    <description>תאריך ושעת חתימה</description>
    <inlineHelpText>תאריך ושעת חתימה</inlineHelpText>
    <label>Signed Time</label>
    <type>DateTime</type>
</CustomField>