force-app/main/default/objects/Signature__c/fields/Soldier__c.field-meta.xml
<CustomField>
    <fullName>Soldier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>החייל החתום</description>
    <inlineHelpText>החייל החתום</inlineHelpText>
    <label>Soldier</label>
    <referenceTo>Soldier__c</referenceTo>
    <relationshipLabel>Signed soldiers</relationshipLabel>
    <relationshipName>Soldier_Signed</relationshipName>
    <type>Lookup</type>
</CustomField>